files/nodered/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered
  namespace: pods
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: nodered.elarreglador.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodered
                port:
                  number: 1880
  tls:
    - hosts:
        - nodered.elarreglador.eu
      secretName: nodered-elarreglador-eu-tls
